<resources>
    <string name="app_name">Concussion Monitoring App</string>
    <string name="string_name">Name: </string>
    <string name="string_age">Age: </string>
    <string name="string_save">Save</string>
    <string name="string_name_data">Sample Name </string>
    <string name="string_age_data">00 </string>
    <string name="string_data">Impact Data </string>
    <string name="string_impact_count">Impact Count</string>
    <string name="string_largest_force">Average Force</string>
    <string name="string_impact_count_data">0</string>
    <string name="string_largest_force_data">0</string>
    <string name="string_settings">Settings</string>
    <string name="string_view_data">View Data</string>
    <string name="string_clear_data">Clear Impact Data</string>
</resources>
